--- a/static/html/login.html
+++ b/static/html/login.html
@@ -1,6 +1,6 @@
 <form class="login__form" method="POST">
-  <input type="text" name="username" placeholder="Username" />
-  <input type="password" name="password" placeholder="Password" />
+  <input type="text" name="username" required placeholder="Username" />
+  <input type="password" name="password" required placeholder="Password" />
   <input type="submit" value="Login" />
 </form>
-<a href="/users/signup">&create new user &rarr;</a>
+<a href="/users/signup">create new user &rarr;</a>
