--- a/static/html/upload.html
+++ b/static/html/upload.html
@@ -2,7 +2,7 @@
   <h2>Create post</h2>
   <form class="post__form" method="POST" action="/posts/upload">
     <div class="title">
-      <label for="upload__title">title: </label>
+      <label for="upload__title">title </label>
       <input
         class="title__input"
         type="text"
@@ -11,11 +11,11 @@
         placeholder="Title"
         required
       />
-      <input type="submit" value="Upload" />
     </div>
     <div class="content">
-      <label for="upload__title">content </label>
-      <input type="text" name="content" id="upload__content" required />
+      <label for="upload__content">content </label>
+      <textarea name="content" id="upload__content" required></textarea>
     </div>
+    <input type="submit" value="Upload" />
   </form>
 </div>
