--- a/static/html/home.html
+++ b/static/html/home.html
@@ -1,4 +1,1 @@
-<div class="home__url">
-  <a href="/users/login">Login&rarr;</a><br />
-  <a href="/posts">Post page&rarr;</a>
-</div>
+<div class="home__url"><a href="/users/login">Login&rarr;</a><br /></div>
