--- a/static/html/login.html
+++ b/static/html/login.html
@@ -1,8 +1,20 @@
 <div class="login__div">
   <h1>Login</h1>
   <form class="login__form" method="POST">
-    <input type="text" name="username" required placeholder="Username" />
-    <input type="password" name="password" required placeholder="Password" />
+    <input
+      type="text"
+      name="username"
+      maxlength="16"
+      required
+      placeholder="Username"
+    />
+    <input
+      type="password"
+      name="password"
+      maxlength="16"
+      required
+      placeholder="Password"
+    />
     <input type="submit" value="Login" />
   </form>
   <a href="/users/signup">create new user &rarr;</a>
