--- a/static/html/signup.html
+++ b/static/html/signup.html
@@ -1,13 +1,26 @@
 <div class="signup__div">
   <h1>Sign up</h1>
   <form class="signup__form" method="POST" action="/users/signup">
-    <input type="text" name="username" placeholder="Username" required />
-    <input type="text" name="name" placeholder="Name" required />
-    <input type="password" name="password" placeholder="Password" required />
+    <input
+      type="text"
+      name="username"
+      placeholder="Username"
+      maxlength="16"
+      required
+    />
+    <input type="text" name="name" placeholder="Name" maxlength="16" required />
+    <input
+      type="password"
+      name="password"
+      placeholder="Password"
+      maxlength="16"
+      required
+    />
     <input
       type="password"
       name="confirmPassword"
       placeholder="Confirm password"
+      maxlength="16"
       required
     />
     <input type="submit" value="SignUp" />
